fix: Change margin to article for better readability

--- a/css/app.css
+++ b/css/app.css
@@ -94,7 +94,7 @@ blockquote {
 }
 
 article {
-  margin-bottom: 50px;
+  margin: 0px 50px 50px 50px;
 }
 article > p {
   text-align: left;
